fix some spacing issues

--- a/css/global.css
+++ b/css/global.css
@@ -199,22 +199,22 @@ h3, p {
 }
 
 .inductee-details .year {
-  height: 40px;
-  width: 90px;
+  height: 30px;
+  width: 80px;
   margin: 0 auto;
   background-color: #202c5f;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
   letter-spacing: 0.5px;
 }
 
 .inductee-details .display-name {
   font-family: 'Playfair Display', serif;
-  font-size: 48px;
+  font-size: 40px;
   color: #202c5f;
   text-align: center;
   margin-top: 25px;
@@ -222,7 +222,7 @@ h3, p {
 }
 
 .degrees-container, .department-container {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.25px;
   margin-top: 10px;
@@ -248,16 +248,17 @@ h3, p {
 }
 
 .inductee-details .biography {
-  height: 250px;
+  height: 300px;
   overflow-y: scroll;
+  padding-right: 20px;
 }
 
 
 .inductee-details .biography > div > p {
   font-size: 16px;
   text-align: justify;
-  letter-spacing: 0.25px;
-  line-height: 2;
+  letter-spacing: 0.5px;
+  line-height: 2.2;
 }
 
 .inductee-details .biography > div > p:first-child,
@@ -315,7 +316,7 @@ h3, p {
   transition-delay: 0s;
 }
 
-.bio-modal {
+.bio-modal, .video-modal {
   background-color: #ffffff;
   width: 815px;
   padding: 80px;
@@ -327,7 +328,12 @@ h3, p {
   transition: top 0.33s ease-in-out, transform 0.33s ease-in-out;
 }
 
-.bio-modal.active {
+.video-modal {
+  width: 1000px;
+}
+
+.bio-modal.active,
+.video-modal.active {
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -340,7 +346,8 @@ h3, p {
   text-align: justify;
 }
 
-.bio-modal .modal-close {
+.bio-modal .modal-close,
+.video-modal .modal-close {
   position: absolute;
   bottom: 30px;
   left: 80px;
@@ -352,6 +359,7 @@ h3, p {
   text-decoration: none;
 }
 
-.bio-modal .modal-close .fa-arrow-left {
+.bio-modal .modal-close .fa-arrow-left,
+.video-modal .modal-close .fa-arrow-left {
   margin-right: 20px;
 }
